--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,10 @@ DATA_PATH_HOST=~/.docker/data
 SECRETSDIR=~/.docker/data/secrets
 
 ### Docker compose files ##################################
+
+# Select which docker-compose files to include.
+COMPOSE_FILE=docker-compose.mgmt.yml:docker-compose.dbs.yml
+
 WORKSPACE_TIMEZONE=Africa/Lusaka
 
 # Change the separator from : to ; on Windows
@@ -38,15 +42,9 @@ TUNNEL_URL=your.domain.tld
 # Local domain name
 DOMAIN_NAME=local.test
 
-# Management Containers
-### Docker compose files ##################################
-
-# Select which docker-compose files to include.
-COMPOSE_FILE=docker-compose.mgmt.yml:docker-compose.yml
-
 ### TRAEFIK #################################################
 
-TRAEFIK_VERSION=2.4
+TRAEFIK_VERSION=2.5
 TRAEFIK_HOST_HTTP_PORT=80
 TRAEFIK_HOST_HTTPS_PORT=443
 
