feat: update webhook

--- a/postgres/docker-entrypoint-initdb.d/createdb.sh.example
+++ b/postgres/docker-entrypoint-initdb.d/createdb.sh.example
@@ -14,11 +14,11 @@
 # this sh script will auto run when the postgres container starts and the $DATA_PATH_HOST/postgres not found.
 #
 # 
-# psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "$POSTGRES_DB" <<-EOSQL
-#     CREATE USER db1 WITH PASSWORD 'db1';
-#     CREATE DATABASE db1;
-#     GRANT ALL PRIVILEGES ON DATABASE db1 TO db1;
-# EOSQL
+psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "$POSTGRES_DB" <<-EOSQL
+    CREATE USER developer WITH PASSWORD '129eeccfcaf769fec4ebe6872a42e728739b6220a5373a76';
+    CREATE DATABASE motor_ssp;
+    GRANT ALL PRIVILEGES ON DATABASE motor_ssp TO developer;
+EOSQL
 # 
 # psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "$POSTGRES_DB" <<-EOSQL
 #     CREATE USER db2 WITH PASSWORD 'db2';
