--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,8 @@ APP_CODE_CONTAINER_FLAG=:cached
 # sudo chown $USER:docker -R ~/.docker/; sudo setfacl -Rdm g:docker:rwx ~/.docker/; sudo chmod -R 775 ~/.docker/
 # sudo chown $USER:docker ~/.docker/data/secrets
 # sudo chmod 600 ~/.docker/data/secrets
-DATA_PATH_HOST=~/.docker/data
-SECRETSDIR=~/.docker/data/secrets
+DATA_PATH_HOST=/home/${USER}/.docker/data
+SECRETSDIR=/home/${USER}/.docker/data/secrets
 
 ### Docker compose files ##################################
 
@@ -44,7 +44,7 @@ DOMAIN_NAME=local.test
 
 ### TRAEFIK #################################################
 
-TRAEFIK_VERSION=2.5
+TRAEFIK_VERSION=2.9
 TRAEFIK_HOST_HTTP_PORT=80
 TRAEFIK_HOST_HTTPS_PORT=443
 
